--- a/Client/src/main/resources/com/example/client/product-table-view.fxml
+++ b/Client/src/main/resources/com/example/client/product-table-view.fxml
@@ -8,15 +8,21 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.Controller">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.ProductTableView">
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
    <children>
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="129.0" text="Продукты" />
+            <Button fx:id="Producer" mnemonicParsing="false" onAction="#ClickOnProducersBtn" prefHeight="26.0" prefWidth="129.0" text="Продукты" />
+         </children>
+      </HBox>
       <TableView fx:id="Table" prefHeight="430.0" prefWidth="860.0">
-        <columns>
-          <TableColumn fx:id="Name" prefWidth="165.5999698638916" text="Название" />
-          <TableColumn fx:id="Amount" minWidth="0.0" prefWidth="75.20001220703125" text="Количество" />
+         <columns>
+            <TableColumn fx:id="Name" prefWidth="165.5999698638916" text="Название" />
+            <TableColumn fx:id="Amount" minWidth="0.0" prefWidth="75.20001220703125" text="Количество" />
             <TableColumn fx:id="Description" prefWidth="164.0" text="Описание" />
             <TableColumn fx:id="FirstDate" prefWidth="249.60006713867188" text="Срок изготовления" />
             <TableColumn fx:id="SecondDate" prefWidth="211.20001220703125" text="Годен до" />
@@ -25,32 +31,32 @@
       </TableView>
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
-            <TextField fx:id="name" text="Название">
+            <TextField fx:id="name" promptText="Название">
                <HBox.margin>
                   <Insets right="5.0" top="20.0" />
                </HBox.margin>
             </TextField>
-            <TextField fx:id="amount" text="Кол-во">
+            <TextField fx:id="amount" promptText="Кол-во">
                <HBox.margin>
                   <Insets right="5.0" top="20.0" />
                </HBox.margin>
             </TextField>
-            <TextField fx:id="decription" text="Описание">
+            <TextField fx:id="decription" promptText="Описание">
                <HBox.margin>
                   <Insets right="5.0" top="20.0" />
                </HBox.margin>
             </TextField>
-            <TextField fx:id="firstDate" text="Срок изготовления">
+            <TextField fx:id="firstDate" promptText="Срок изготовления">
                <HBox.margin>
                   <Insets right="5.0" top="20.0" />
                </HBox.margin>
             </TextField>
-            <TextField fx:id="secondDate" text="Годен до">
+            <TextField fx:id="secondDate" promptText="Годен до">
                <HBox.margin>
                   <Insets right="5.0" top="20.0" />
                </HBox.margin>
             </TextField>
-            <TextField fx:id="defect" text="Дефект">
+            <TextField fx:id="defect" promptText="Дефект">
                <HBox.margin>
                   <Insets right="5.0" top="20.0" />
                </HBox.margin>
